# imat-source

benchmarks/oliveira/04_07/: randm04.02.02.02.020_0030.01.aba.beta  randm04.02.02.02.020_0030.02.aba.beta  randm04.02.02.02.020_0030.03.aba.beta  randm04.02.02.03.020_0030.02.aba.beta  randm04.02.02.03.020_0030.03.aba.beta  randm04.02.02.03.020_0030.05.aba.beta  randm04.02.02.04.020_0030.01.aba.beta  randm04.02.02.05.020_0030.02.aba.beta  randm04.02.02.05.020_0030.05.aba.beta  randm04.02.02.06.020_0030.01.aba.beta  randm04.02.02.06.020_0030.02.aba.beta  randm04.02.02.08.020_0030.02.aba.beta  randm04.02.02.09.020_0030.03.aba.beta  randm04.02.02.09.020_0030.05.aba.beta  randm04.02.02.10.020_0030.02.aba.beta  randm04.02.02.10.020_0030.03.aba.beta  randm04.02.02.10.020_0030.05.aba.beta  randm04.02.02.12.020_0030.01.aba.beta  randm04.02.02.12.020_0030.03.aba.beta  randm04.02.02.12.020_0030.05.aba.beta  randm04.02.02.13.020_0030.01.aba.beta  randm04.02.02.13.020_0030.03.aba.beta  randm04.02.02.14.020_0030.03.aba.beta  randm04.02.02.16.020_0030.02.aba.beta  randm04.02.02.16.020_0030.03.aba.beta  randm04.02.02.17.020_0030.02.aba.beta  (+96 more)
nerode/: nerode.opam
nerode-learn/: nerodelearn.opam
nerode-learn/lib/: activeLearner.ml  cliOpt.ml  hybridLearner.ml  lstarblanks.ml  obsTbl.ml  solver.ml  teacher.ml  teacherIndifferent.ml  teacherLStar.ml  teacherPosNeg.ml  teacherSep.ml  trie.mli
nerode/lib/: intNfa.mli.hide
ocaml-z3/: README.md  z3.opam
ocaml-z3/lib/: Smtlib.ml
scripts/: reproduce-abridged.sh  reproduce-everything.sh  state-vs-wlitems.py  time.py
(+638 files in other folders)
