opam-version: "2.0"
version: "0.0.1"
synopsis: "NerodeLearn"
maintainer: "anonymous"
authors: ["anonymous authors"]
homepage: ""
dev-repo: ""
bug-reports: ""
license: "Apache2"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.09.0"}
  "alcotest"
  "dune" {>= "1.2"}
  "core" {>= "0.13.0"}
  "core_unix" {>= "0.15.0"}
  "ounit2"
  "ppx_deriving_yojson"
  "ppx_jane" {>= "0.13.0" }
  "ppx_js_style" {>= "0.13.0" }
  "yojson" {>= "1.7.0"}
  "nice_parser"
  "menhir" {build & >= "20190626"}
]
